[project]
name = "bump-py-version"
version = "0.0.6"

[tool.black]
line-length = 140

[tool.mypy]
exclude = [ "venv",]

[tool.bumptag]
version_file = "bump_py_version/__init__.py"

[tool.bumptag.replace_patterns.pipx]
file = "README.md"
search = "<!-- LATEST-VERSION-PIPX -->"
replace = "\tpipx install git+https://github.com/diversen/bump-py-version@{version}\n"
