[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bump-py-version"
version = "2.0.1"
description = "Bump a python version in python files. Create a new tag and push it to git repository."
readme = "README.md"
dependencies = ["click==8.1.7", "toml==0.10.2", "types-toml==0.10.8.20240310"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
]
[[project.authors]]
name = "Dennis Iversen"
email = "dennis.iversen@gmail.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/diversen/bump-py-version"

[project.scripts]
bump-py-version = "bump_py_version.cli:cli"

[tool.black]
line-length = 140

[tool.mypy]
exclude = ["venv"]

[tool.bump_version]
version_file = "bump_py_version/__init__.py"

[tool.bump_version.replace_patterns.pipx]
file = "README.md"
search = "<!-- LATEST-VERSION-PIPX -->"
replace = "\tpipx install git+https://github.com/diversen/bump-py-version@{version}\n"
